--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ipv6-neighbors.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ipv6-neighbors.j2
@@ -3,28 +3,30 @@
  Use of this source code is governed by the Apache License 2.0
  that can be found in the LICENSE file.
 #}
-{# doc - ipv6 static neighbors #}
+{# doc - ipv6 neighbors #}
 {% if ipv6_neighbor is arista.avd.defined %}
 
-## IPv6 Neighbors
+### IPv6 Neighbors
 
-{%     if ipv6_neighbor.cache_persistent is arista.avd.defined(true) %}
-IPv6 neighbor cache persistency is enabled.
+{%     if ipv6_neighbor.persistent.enabled is arista.avd.defined(true) %}
+{%         set persistent_doc = "IPv6 neighbor cache persistency is enabled." %}
+{%         if ipv6_neighbor.persistent.refresh_delay is arista.avd.defined %}
+{%             set persistent_doc = persistent_doc ~ " The refresh-delay is " ~ ipv6_neighbor.persistent.refresh_delay ~ " seconds after reboot." %}
+{%         endif %}
+{{ persistent_doc }}
 {%     endif %}
-{%     if ipv6_neighbor.persistent.enabled is arista.avd.defined(true) and ipv6_neighbor.persistent.refresh_delay is arista.avd.defined %}
-Refresh delay to restore the IPv6 neighbor cache after reboot: {{ ipv6_neighbor.persistent.refresh_delay }} seconds
-{%     endif %}
-{% endif %}
-{% if ipv6_neighbor.static_entries is arista.avd.defined %}
+{%     if ipv6_neighbor.static_entries is arista.avd.defined %}
 
-### IPv6 Static Neighbors
+#### IPv6 Static Neighbors
 
 | VRF | IPv6 Address | Exit Interface | MAC Address |
-{%     for neighbor in ipv6_neighbor.static_entries %}
-{%         if neighbor.ipv6_address is arista.avd.defined and neighbor.interface is arista.avd.defined and neighbor.mac_address is arista.avd.defined %}
+| --- | ------------ | -------------- | ----------- |
+{%         for neighbor in ipv6_neighbor.static_entries %}
+{%             if neighbor.ipv6_address is arista.avd.defined and neighbor.interface is arista.avd.defined and neighbor.mac_address is arista.avd.defined %}
 | {{ neighbor.vrf | arista.avd.default("-") }} | {{ neighbor.ipv6_address }} | {{ neighbor.interface }} | {{ neighbor.mac_address }} |
-{%         endif %}
-{%     endfor %}
+{%             endif %}
+{%         endfor %}
+{%     endif %}
 
 #### IPv6 Neighbor Configuration
 
