--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/routing.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/routing.j2
@@ -11,6 +11,7 @@
        or ipv6_unicast_routing is arista.avd.defined
        or static_routes is arista.avd.defined
        or ipv6_static_routes is arista.avd.defined
+       or ipv6_neighbor is arista.avd.defined
        or arp is arista.avd.defined
        or router_general is arista.avd.defined
        or router_service_insertion is arista.avd.defined
