--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ipv6-neighbors.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ipv6-neighbors.j2
@@ -4,11 +4,8 @@
  that can be found in the LICENSE file.
 #}
 {# eos - ipv6 neighbors #}
-{% if ipv6_neighbor.cache_persistent is arista.avd.defined(true) or ipv6_neighbor.persistent.enabled is arista.avd.defined(true) or ipv6_neighbor.static_entries is arista.avd.defined %}
+{% if ipv6_neighbor.persistent.enabled is arista.avd.defined(true) or ipv6_neighbor.static_entries is arista.avd.defined %}
 !
-{%     if ipv6_neighbor.cache_persistent is arista.avd.defined(true) %}
-ipv6 neighbor cache persistent
-{%     endif %}
 {%     if ipv6_neighbor.persistent.enabled is arista.avd.defined(true) %}
 {%         set persistent_cli = "ipv6 neighbor persistent" %}
 {%         if ipv6_neighbor.persistent.refresh_delay is arista.avd.defined %}
