--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -1472,14 +1472,14 @@ router bgp {{ router_bgp.as }}
 {%                 endif %}
 {%             endif %}
 {%         endif %}
-{%         if vrf.default_route_export is arista.avd.defined %}
-{%             for address_family in vrf.default_route_export %}
-{%                 set vrf_default_route_export_cli = "default-route export " ~ address_family.address_family %}
-{%                 if address_family.rcf is arista.avd.defined %}
-{%                     set vrf_default_route_export_cli = vrf_default_route_export_cli ~ " rcf " ~ address_family.rcf %}
-{%                 elif address_family.route_map is arista.avd.defined %}
-{%                     set vrf_default_route_export_cli = vrf_default_route_export_cli ~ " route-map " ~ address_family.route_map %}
-{%                 elif address_family.always is arista.avd.defined(true) %}
+{%         if vrf.default_route_exports is arista.avd.defined %}
+{%             for default_route_export in vrf.default_route_exports %}
+{%                 set vrf_default_route_export_cli = "default-route export " ~ default_route_export.address_family %}
+{%                 if default_route_export.rcf is arista.avd.defined %}
+{%                     set vrf_default_route_export_cli = vrf_default_route_export_cli ~ " rcf " ~ default_route_export.rcf %}
+{%                 elif default_route_export.route_map is arista.avd.defined %}
+{%                     set vrf_default_route_export_cli = vrf_default_route_export_cli ~ " route-map " ~ default_route_export.route_map %}
+{%                 elif default_route_export.always is arista.avd.defined(true) %}
 {%                     set vrf_default_route_export_cli = vrf_default_route_export_cli ~ " always" %}
 {%                 endif %}
       {{ vrf_default_route_export_cli }}
