--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -160,6 +160,48 @@ interface {{ ethernet_interface.name }}
 {%     if ethernet_interface.pvlan_mapping is arista.avd.defined %}
    switchport pvlan mapping {{ ethernet_interface.pvlan_mapping }}
 {%     endif %}
+{%     if ethernet_interface.switchport.access_vlan is arista.avd.defined %}
+   switchport access vlan {{ ethernet_interface.switchport.access_vlan }}
+{%     endif %}
+{%     if ethernet_interface.switchport.trunk.native_vlan_tag is arista.avd.defined(true) %}
+   switchport trunk native vlan tag
+{%     elif ethernet_interface.switchport.trunk.native_vlan is arista.avd.defined %}
+   switchport trunk native vlan {{ ethernet_interface.switchport.trunk.native_vlan }}
+{%     endif %}
+{%     if ethernet_interface.switchport.phone.vlan is arista.avd.defined %}
+   switchport phone vlan {{ ethernet_interface.switchport.phone.vlan }}
+{%     endif %}
+{%     if ethernet_interface.switchport.phone.trunk is arista.avd.defined %}
+   switchport phone trunk {{ ethernet_interface.switchport.phone.trunk }}
+{%     endif %}
+{%     if ethernet_interface.switchport.trunk.allowed_vlans is arista.avd.defined %}
+   switchport trunk allowed vlan {{ ethernet_interface.switchport.trunk.allowed_vlans }}
+{%     endif %}
+{%     if ethernet_interface.switchport.mode is arista.avd.defined %}
+   switchport mode {{ ethernet_interface.switchport.mode }}
+{%     endif %}
+{%     for trunk_group in ethernet_interface.switchport.trunk.groups | arista.avd.natural_sort %}
+   switchport trunk group {{ trunk_group }}
+{%     endfor %}
+{%     if ethernet_interface.switchport.enabled is arista.avd.defined(false) %}
+   no switchport
+{%     endif %}
+{%     for vlan_translation in ethernet_interface.switchport.vlan_translations | arista.avd.natural_sort('direction') %}
+{%         if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
+{%             set vlan_translation_cli = 'switchport vlan translation' %}
+{%             if vlan_translation.direction | arista.avd.default in ['in', 'out'] %}
+{%                 set vlan_translation_cli = vlan_translation_cli ~ ' ' ~ vlan_translation.direction %}
+{%             endif %}
+{%             set vlan_translation_cli = vlan_translation_cli ~ ' ' ~ vlan_translation.from ~ ' ' ~ vlan_translation.to %}
+   {{ vlan_translation_cli }}
+{%         endif %}
+{%     endfor %}
+{%     if ethernet_interface.switchport.trunk.private_vlan_secondary is arista.avd.defined(true) %}
+   switchport trunk private-vlan secondary
+{%     endif %}
+{%     if ethernet_interface.switchport.pvlan_mapping is arista.avd.defined %}
+   switchport pvlan mapping {{ ethernet_interface.switchport.pvlan_mapping }}
+{%     endif %}
 {%     if ethernet_interface.l2_protocol.encapsulation_dot1q_vlan is arista.avd.defined %}
    l2-protocol encapsulation dot1q vlan {{ ethernet_interface.l2_protocol.encapsulation_dot1q_vlan }}
 {%     endif %}
