--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/monitor-session-default.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/monitor-session-default.j2
@@ -3,7 +3,7 @@
  Use of this source code is governed by the Apache License 2.0
  that can be found in the LICENSE file.
 #}
-{# eos - monitor sessions default #}
+{# eos - monitor session default #}
 {% if monitor_session_default_encapsulation_gre.payload is arista.avd.defined %}
 !
 monitor session default encapsulation gre payload {{ monitor_session_default_encapsulation_gre.payload }}
