--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/vxlan-interface.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/vxlan-interface.j2
@@ -5,7 +5,7 @@
 #}
 {# j2lint: disable=V1 #}
 {# doc - vxlan interface #}
-{% set vxlan_config = vxlan_interface.vxlan1 if vxlan_interface.vxlan1 is arista.avd.defined else vxlan_interface.Vxlan1 %}
+{% set vxlan_config = vxlan_interface.vxlan1 | arista.avd.default(vxlan_interface.Vxlan1) %}
 {% if vxlan_config is arista.avd.defined %}
 
 ### VXLAN Interface
