Update generation for new config

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-device-documentation.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-device-documentation.j2
@@ -51,6 +51,8 @@
 {% include 'documentation/lacp.j2' %}
 {# Spanning Tree #}
 {% include 'documentation/spanning-tree.j2' %}
+{# Sync-E #}
+{% include 'documentation/sync-e.j2' %}
 {# Internal VLAN Allocation Policy #}
 {% include 'documentation/vlan-internal-order.j2' %}
 {# VLANs #}
