--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
@@ -129,6 +129,8 @@
 {% include 'eos/hardware.j2' %}
 {# spanning-tree #}
 {% include 'eos/spanning-tree.j2' %}
+{# sync-e #}
+{% include 'eos/sync-e.j2' %}
 {# platform #}
 {% include 'eos/platform.j2' %}
 {# service unsupported-transceiver #}
